--- a/asset/index-style.css
+++ b/asset/index-style.css
@@ -43,6 +43,21 @@ body {
 	margin-bottom: 20px;
 }
 
+#btnCurrency button {
+	margin-bottom: 20px;
+	border-radius: 0;
+	margin-left:5px;
+	margin-right: 5px;
+	outline:0;
+}
+
+#btnCurrency .active {
+	border:1px solid #343a40;
+	background-color: #fff;
+	color:#343a40;
+	outline:0;
+}
+
 #graph {
 	border: 1px solid #007bff;
 	padding:10px;
